--- a/render.yaml
+++ b/render.yaml
@@ -27,7 +27,7 @@ services:
     buildCommand: yarn install && yarn build
     startCommand: npx serve -s build -l $PORT
     envVars:
-      - key: REACT_APP_BACKEND_URL
+      - key: https://vaaniai-backend-88re.onrender.com
         fromService:
           type: web
           name: vaaniai-backend
